# whitehole

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  vision.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  GETTING_STARTED.md  ROADMAP.md  STACK_ANALYSIS.md
examples/: demo_schwarzschild.py
src/whitehole/: __init__.py
src/whitehole/causal/: __init__.py  classifier.py  geodesic.py
src/whitehole/coordinates/: __init__.py  transforms.py
src/whitehole/spacetimes/: __init__.py  base.py  schwarzschild.py  vaidya.py
src/whitehole/visualization/: __init__.py  penrose.py  plotter.py
tests/: __init__.py  test_geodesics.py  test_schwarzschild.py
