[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whitehole"
version = "0.1.0"
description = "Computational framework for global causal structure visualization in General Relativity"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sameer" }
]
keywords = ["general-relativity", "black-holes", "causal-structure", "penrose-diagrams", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
numba = [
    "numba>=0.57.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/sammiezx/whitehole"
Documentation = "https://github.com/sammiezx/whitehole#readme"
Repository = "https://github.com/sammiezx/whitehole"

[tool.hatch.build.targets.wheel]
packages = ["src/whitehole"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
